--- a/translations/actions.fr.yaml
+++ b/translations/actions.fr.yaml
@@ -7,6 +7,7 @@ form:
     cancel: Annuler
     see: Visualiser
     search: Rechercher
+    password: Mot de passe
   search:
     placeholder: Rechercher
 records:
