--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -104,6 +104,25 @@ wednesday: Mercredi
 thursday: Jeudi
 friday: Vendredi
 saturday: Samedi
+Sunday: Dimanche
+Monday: Lundi
+Tuesday: Mardi
+Wednesday: Mercredi
+Thursday: Jeudi
+Friday: Vendredi
+Saturday: Samedi
+January: Janvier
+February: Février
+March: Mars
+April: Avril
+May: Mai
+June: Juin
+July: Juillet
+August: Août
+September: Septembre
+October: Octobre
+November: Novembre
+December: Décembre
 week: Semaine
 twentyfourhourFormat12: Affichage 12 h
 twentyfourhourFormat24: Affichage 24h
