--- a/translations/actions.fr.yaml
+++ b/translations/actions.fr.yaml
@@ -65,6 +65,8 @@ entry:
     title: Liste des réservations
   new:
     title: Nouvelle réservation
+    periodicity:
+      title: 'Options de périodicité'
 
 next: Suivant
 previous: Précédent
