--- a/translations/actions.fr.yaml
+++ b/translations/actions.fr.yaml
@@ -61,7 +61,7 @@ typeArea:
     title: Ajouter un type de réservation
 entry:
   delete:
-    confirm: Ëtes vous sur de supprimer %name%
+    confirm: Ëtes vous sur de supprimer name
   index:
     title: Liste des réservations
   new:
