--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -138,6 +138,9 @@ periodicity:
     everyweek: Chaque semaine
     everyday: Chaque jour
     none: Aucune
+  form:
+    selectdays.label: Sélectionnez les jours
+    selectweeksrepeat.label: Quelle répétition
 login:
   form:
     password:
@@ -274,3 +277,10 @@ page:
 flash:
   entry:
     delete: Réservation supprimée
+None: Aucune
+every_week_repeat: Toutes les semaines
+every_week_repeat_1: Toutes les semaines
+every_week_repeat_2: Toutes les 2 semaines
+every_week_repeat_3: Toutes les 3 semaines
+every_week_repeat_4: Toutes les 4 semaines
+every_week_repeat_5: Toutes les 5 semaines
