--- a/translations/validators.fr.yaml
+++ b/translations/validators.fr.yaml
@@ -1,5 +1,5 @@
 entry:
-    busy: 'La réservation %value%  est dans une zone accupée.'
+    busy: La réservation est dans une zone accupée.
     duration:
         time:
             notintergerfordaysorforweeks: La durée doit être un entier pour les jours et semaines.
