--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -40,3 +40,21 @@ user:
       label: Ressource par défaut
     isEnabled:
       label: Actif?
+entry:
+  form:
+    user:
+      select:
+        label: Sélectionnez un ou plusieurs utilisateurs
+
+usermanager:
+  form:
+    area_level:
+      label: Administrateur ou gestionnaire ?
+      help: Si vous cochez administrateur ou gestionnaire, il n'est pas nécessaire de cochez les ressources ci dessous, un adminstrateur ou un gestionnaire de domaine aura tous les droits sur les ressources de celui-ci.
+      administrator:
+        label: Administrateur du domaine (Peux modifier le domaine, ajouter des resources...)
+      manager:
+        label: Gestionnaire du domaine (Peux enregistrer des réservations dans toutes les ressources)
+usermanagerresource:
+  new:
+    title: Gestion des droits
