--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -40,6 +40,9 @@ user:
       label: Ressource par défaut
     isEnabled:
       label: Actif?
+      help: Décochez pour désactiver l'utilisateur
+    roles:
+      label: Rôle(s)
 entry:
   form:
     user:
