--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -78,3 +78,5 @@ room:
       placeholder: Toutes les ressources
       empty:
         placeholder: Sélectionnez un domaine
+settings:
+  title: Paramètres de Grr
