test entry type

--- a/translations/validators.fr.yaml
+++ b/translations/validators.fr.yaml
@@ -9,3 +9,8 @@ assert:
         startstdend: La date de début doit être plus petite que la date de fin
 area:
     depasse: L'heure de {{param1}} doit être plus {{param2}} que l'heure {{param3}} de la salle.
+
+
+entry_type:
+    constraint:
+        already_use: Cette lettre est déjà utilisée
