--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -77,6 +77,6 @@ room:
       help: Help
       placeholder: Toutes les ressources
       empty:
-        placeholder: Sélectionnez un domaine
+        placeholder: Sélectionnez d'abord un domaine
 settings:
   title: Paramètres de Grr
