bug time duration hour

--- a/translations/actions.fr.yaml
+++ b/translations/actions.fr.yaml
@@ -49,6 +49,7 @@ menu:
     type: Type de réservations
   administration: Administration
   planning: Retour au planning
+  search: Rechercher
 user:
   index:
     title: Liste des utilisateurs
