--- a/translations/validators.fr.yaml
+++ b/translations/validators.fr.yaml
@@ -13,3 +13,13 @@ assert:
 entry_type:
     constraint:
         already_use: Cette lettre est déjà utilisée
+area:
+  constraint:
+    start_smaller_end: L'heure de fin de journée doit être plus grande que l'heure de début
+
+periodicity:
+  constraint:
+    end_time: La date de fin de la périodicité doit être plus grande que la date de fin de la réservation
+    every_day: La durée ne peut exéder une journée pour une répétition par jour
+    every_month: La date de fin de la périodicité doit au moins dépasser d'un mois par rapport à la de de fin de la réservation
+    every_year: La date de fin de la périodicité doit au moins dépasser d'un an par rapport à la de de fin de la réservation
