test periodicity every week

--- a/translations/validators.fr.yaml
+++ b/translations/validators.fr.yaml
@@ -23,3 +23,6 @@ periodicity:
     every_day: La durée ne peut excéder une journée pour une répétition par jour
     every_month: La date de fin de la périodicité doit au moins dépasser d'un mois par rapport à la de de fin de la réservation
     every_year: La date de fin de la périodicité doit au moins dépasser d'un an par rapport à la de de fin de la réservation
+    every_weeks:
+      no_day: Aucun jours de la semaine sélectionnés
+      no_repeat: Aucune répétition choisie
