test periodicity validator

--- a/translations/validators.fr.yaml
+++ b/translations/validators.fr.yaml
@@ -24,5 +24,6 @@ periodicity:
     every_month: La date de fin de la périodicité doit au moins dépasser d'un mois par rapport à la de de fin de la réservation
     every_year: La date de fin de la périodicité doit au moins dépasser d'un an par rapport à la de de fin de la réservation
     every_weeks:
+      endtime: La date de fin de la périodicité doit au moins dépasser d'une semaine par rapport à la de de fin de la réservation
       no_day: Aucun jours de la semaine sélectionnés
       no_repeat: Aucune répétition choisie
