--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -15,6 +15,7 @@ menu:
     logout: Me déconnecter
     account: Compte
 user:
+  title: Utilisateur
   account:
     area:
       default:
@@ -49,19 +50,23 @@ entry:
       select:
         label: Sélectionnez un ou plusieurs utilisateurs
 
-usermanager:
+authorization:
+  area:
+    title: Administrateur(s)
+  resource:
+    title: Administrateur(s)
   form:
     area_level:
-      label: Administrateur ou gestionnaire ?
+      label: Quel rôle ?
       help: Si vous cochez administrateur ou gestionnaire, il n'est pas nécessaire de cochez les ressources ci dessous, un adminstrateur ou un gestionnaire de domaine aura tous les droits sur les ressources de celui-ci.
+      placeholder: Aucun
       administrator:
-        label: Administrateur du domaine (Peux modifier le domaine, ajouter des resources...)
+        label: Administrateur du domaine (Peux modifier, supprimer le domaine. Ajouter, modifier des resources...)
       manager:
         label: Gestionnaire du domaine (Peux enregistrer des réservations dans toutes les ressources)
   delete:
     confirm: Révoquer ce droit ?
 usermanagerresource:
-  new:
     title: Gestion des droits
 area:
   form:
@@ -69,6 +74,7 @@ area:
       label: Domaine
       help: Aide
       placeholder: Séléctionnez un domaine
+  administrator: Administrateur du domaine
 
 room:
   form:
@@ -82,3 +88,8 @@ settings:
   title: Paramètres de Grr
 yes: oui
 no: non
+No: Non
+not:
+  found: Rien de trouvé
+Yes: Oui
+actions: Actions
