--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -51,21 +51,24 @@ entry:
         label: Sélectionnez un ou plusieurs utilisateurs
 
 authorization:
+  role:
+    area:
+      administrator: Administrateur du domaine (Peux modifier, supprimer le domaine. Ajouter, modifier des resources...)
+    resource:
+      administrator: Gestionnaire des ressources (Peux enregistrer des réservations dans toutes les ressources)
   area:
-    title: Administrateur(s)
+    title: Autorisations de
+    new:
+      title: Nouvelle autorisation pour
+    role:
+      label: Quel rôle ?
   resource:
     title: Administrateur(s)
-  form:
-    area_level:
-      label: Quel rôle ?
-      help: Si vous cochez administrateur ou gestionnaire, il n'est pas nécessaire de cochez les ressources ci dessous, un adminstrateur ou un gestionnaire de domaine aura tous les droits sur les ressources de celui-ci.
-      placeholder: Aucun
-      administrator:
-        label: Administrateur du domaine (Peux modifier, supprimer le domaine. Ajouter, modifier des resources...)
-      manager:
-        label: Gestionnaire du domaine (Peux enregistrer des réservations dans toutes les ressources)
   delete:
     confirm: Révoquer ce droit ?
+  room:
+    new:
+      title: Nouvelle autorisation pour
 usermanagerresource:
     title: Gestion des droits
 area:
@@ -75,6 +78,7 @@ area:
       help: Aide
       placeholder: Séléctionnez un domaine
   administrator: Administrateur du domaine
+  resource: Administrateur de resource
 
 room:
   form:
