--- a/translations/actions.fr.yaml
+++ b/translations/actions.fr.yaml
@@ -53,7 +53,7 @@ menu:
   search: Rechercher
 user:
   index:
-    title: Liste des utilisateurs
+    title: Liste des user
   delete:
     confirm: Êtes vous sur de supprimer l'utilisateur %name%
   new:
